# Clade

./: API_GUIDE.md  BACKEND_ARCHITECTURE.md  DEV_DOC.md  LICENSE  LICENSE-AGPL-3.0  LICENSE-MPL-2.0  README.md  commit_msg.txt  diagnose_turn.py  lang_zh.json  start.bat  start.ps1  stop.bat  stop.ps1
backend/: env-example.txt  optimize_database.py  pyproject.toml
backend/app/: main.py
backend/app/ai/: model_router.py  streaming_helper.py
backend/app/ai/prompts/: __init__.py  intelligence.py  plant.py  pressure_response.py  species.py
backend/app/api/: admin_routes.py  analytics.py  divine.py  ecosystem.py  embedding_routes.py  pressure_templates.py  router.py  routes.py  simulation.py  species.py
backend/app/api/tests/: __init__.py  conftest.py  test_api_integration.py
backend/app/config/: embedding_plugins.yaml  tensor_balance.yaml
backend/app/core/: config.py  container.py  database.py  seed.py
backend/app/core/providers/: core_services.py  simulation_services.py  species_services.py
backend/app/models/: config.py  environment.py  species.py
backend/app/repositories/: environment_repository.py  species_repository.py
backend/app/schemas/: requests.py  responses.py
backend/app/services/analytics/: critical_analyzer.py  ecosystem_metrics.py  embedding_integration.py  exporter.py  focus_processor.py  game_hints.py  turn_report.py  (+3 more)
backend/app/simulation/: ARCHITECTURE.md  __init__.py  constants.py  context.py  engine.py  environment.py  legacy_engine.py  pipeline.py  species.py  stage_config.py  stage_config.yaml  stages.py  tensor_stages.py  tile_based_mortality.py
backend/app/tensor/: __init__.py  config.py  ecology.py  hybrid.py  metrics.py  niche_tensor.py  pressure_bridge.py  speciation_monitor.py  state.py  taichi_hybrid_kernels.py  taichi_kernels.py  tradeoff.py
(+241 files in other folders)
