[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "egame-sim"
version = "0.1.0"
description = "AI-driven evolutionary sandbox backend (GPU-only)"
authors = [{ name = "Codex" }]
requires-python = ">=3.11"
# NOTE: 本项目为 GPU-only 架构，需要支持 CUDA/Vulkan 的 GPU
# taichi 会自动使用 GPU，如果没有 GPU 将无法启动
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlmodel>=0.0.21",
    "pydantic-settings>=2.2.1",
    "numpy>=2.0.0",
    "scipy>=1.11.0",
    "networkx>=3.2.1",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.3.0",
    "faiss-cpu>=1.7.4",
    "taichi>=1.7.0",  # GPU-only: 需要 CUDA/Vulkan 支持
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "anyio>=4.4.0",
    "imageio>=2.31.0",
    "lz4>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

